[package]
name = "const-decoder"
version = "0.3.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.57"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["base64", "hex", "decoding", "constant-evaluation"]
categories = ["encoding", "no-std"]
description = "Constant functions for converting hex- and base64-encoded strings into bytes"
repository = "https://github.com/slowli/const-decoder"

[dev-dependencies]
base64 = "0.21.0"
bech32 = "0.9.0"
doc-comment = "0.3.3"
hex = "0.4.3"
pem = "2.0.0"
rand = "0.8.3"
version-sync = "0.9.2"
