[package]
name = "const-decoder"
version = "0.3.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.66"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["base64", "hex", "decoding", "constant-evaluation"]
categories = ["encoding", "no-std"]
description = "Constant functions for converting hex- and base64-encoded strings into bytes"
repository = "https://github.com/slowli/const-decoder"

[dependencies.compile-fmt]
git = "https://github.com/slowli/compile-fmt.git"
version = "0.1.0"
rev = "0f0c1ab3e90c854beede0ceaa87ce0d96e209a7f"

[dev-dependencies]
base64 = "0.21.5"
bech32 = "0.9.0"
doc-comment = "0.3.3"
hex = "0.4.3"
pem = "3.0.1"
rand = "0.8.3"
version-sync = "0.9.2"
