[package]
name = "const-decoder"
version = "0.4.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.67"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["base64", "hex", "decoding", "constant-evaluation"]
categories = ["encoding", "no-std"]
description = "Constant functions for converting hex- and base64-encoded strings into bytes"
repository = "https://github.com/slowli/const-decoder"

[dependencies]
compile-fmt = "0.1.0"

[dev-dependencies]
base64 = "0.22.1"
bech32 = "0.11.0"
doc-comment = "0.3.4"
hex = "0.4.3"
pem = "3.0.6"
rand = "0.8.3"
version-sync = "0.9.2"
